--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
     "eslint.format.enable": true,
     "less.validate": false,
     "scss.validate": false,
+    "[javascript]": {
+        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    },
     "[vue]": {
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     }
